k8s/gitops/infrastructure/observability/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: public
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - "grafana.${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: observability-grafana
          port: 80
